# ios-linuxkit

./: .gitignore  Makefile  README.md  README_arm64.md  main.c
app/: AppDelegate.m  DelayedUITask.m  Terminal.m
app/RootfsPatch.bundle/: manifest.plist
app/terminal/: ghostty-web-VENDORED.txt  term.css  term.html  term.js
asbestos/: asbestos.c  asbestos.h
asbestos/guest-arm64/: gen.c
asbestos/guest-arm64/gadgets-aarch64/: entry.S  math.S  memory.S
docs/: ARM64_GADGET_FUSION_PLAN.md  ARM64_PRODUCTION_BASELINE.md  ARM64_PRODUCTION_DEPLOYMENT.md  ARM64_SMOKE_ISSUES_AND_SYSCALL_COVERAGE.md  ARM64_WORKLOAD_SMOKE_TESTS.md  BENCHMARKSGAME_JAVA_EQUIVALENT_SMOKE.md  CLAUDE_CODE.md  LINUX_BUILD_AND_HOST_ABI.md  README.md  RUNTIME_VALIDATION.md
fs/: poll.c  poll.h  sock.c
fs/proc/: root.c
iSH.xcodeproj/: project.pbxproj
kernel/: calls.c  calls.h  elf.h  epoll.c  exec.c  fork.c  memory.c  mmap.c  poll.c  signal.c  signal.h
tests/arm64/: ai-cli-runtime-coverage.sh  cli-corner-smoke.sh  hot-trace-record-smoke.sh  runtime-coverage.sh
tests/arm64/benchmarksgame/: README.md  run-java-equivalent-smoke.sh
vdso/arm64/: libvdso.so.elf.prebuilt  meson.build
